finished cheese box strat

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # modify this file to change project properties
 teamA=cheesyboxstrat
-teamB=examplefuncsplayer
+teamB=cheesyboxstrat
 maps=maptestsmall
 source=src
 gpr.user=battlecodedownloadpackage
