made bigger box and had politicians reinvest

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # modify this file to change project properties
 teamA=cheesyboxstrat
-teamB=cheesyboxstrat
+teamB=examplefuncsplayer
 maps=maptestsmall
 source=src
 gpr.user=battlecodedownloadpackage
