find best influence based on slanderer influences array

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,8 @@
 # modify this file to change project properties
-teamA=examplefuncsplayer
-teamB=examplefuncsplayer
+teamA=mainrobot
+teamB=mainrobot
 maps=maptestsmall
 source=src
 gpr.user=battlecodedownloadpackage
 profilerEnabled=false
+#org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk1.8.0_271.jdk/Contents/Home
