added pathfinding and separated classes

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # modify this file to change project properties
-teamA=cheesyboxstrat
-teamB=examplefuncsplayer
-maps=maptestsmall
+teamA=sprintbot
+teamB=sprintbot
+maps=Corridor
 source=src
 gpr.user=battlecodedownloadpackage
 profilerEnabled=false
