sprint bot submitted

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # modify this file to change project properties
 teamA=sprintbot
-teamB=sprintbot
-maps=Branches
+teamB=cheesyboxstrat
+maps=Snowflake
 source=src
 gpr.user=battlecodedownloadpackage
 profilerEnabled=false
