--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # modify this file to change project properties
-teamA=sprintbot
-teamB=cheesyboxstrat
+teamA=qualificationbot
+teamB=examplefuncsplayer
 maps=Snowflake
 source=src
 gpr.user=battlecodedownloadpackage
