--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # modify this file to change project properties
 teamA=qualificationbot
-teamB=examplefuncsplayer
-maps=Snowflake
+teamB=qualificationbot
+maps=Branches
 source=src
 gpr.user=battlecodedownloadpackage
 profilerEnabled=false
