--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # modify this file to change project properties
 teamA=qualificationbot
-teamB=ogqualbot
+teamB=sprintbot
 maps=Branches
 source=src
 gpr.user=battlecodedownloadpackage
