pushing for trevors laptopt

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # modify this file to change project properties
 teamA=qualificationbot
-teamB=ogqualbot
-maps=Branches
+teamB=qualificationbot0
+maps=Licc,MainCampus,maptestsmall,NotAPuzzle,Punctuation,qudrants
 source=src
 gpr.user=battlecodedownloadpackage
 profilerEnabled=false
