ready for testing

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,8 @@
 # modify this file to change project properties
 teamA=qualificationbot
-teamB=qualificationbot0
-maps=Licc,MainCampus,maptestsmall,NotAPuzzle,Punctuation,qudrants
+teamB=submittedbot1
+# maps=Branches,BadSnowflake,maptestsmall,Bog,Cow,Corridor,Licc,Chevron
+maps=Corridor,Licc,Chevron,CrossStitch
 source=src
 gpr.user=battlecodedownloadpackage
 profilerEnabled=false
