tried to work on eco

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 teamA=qualificationbot
 teamB=submittedbot1
 # maps=Branches,BadSnowflake,maptestsmall,Bog,Cow,Corridor,Licc,Chevron
-maps=Corridor,Licc,Chevron,CrossStitch
+maps=Cow
 source=src
 gpr.user=battlecodedownloadpackage
 profilerEnabled=false
