kinda beating last submitted strat

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # modify this file to change project properties
-teamA=qualificationbot
-teamB=submittedbot1
+teamA=submittedbot1
+teamB=qualificationbot
 # maps=Branches,BadSnowflake,maptestsmall,Bog,Cow,Corridor,Licc,Chevron
-maps=Cow
+maps=Branches,BadSnowflake,maptestsmall,Bog,Cow,Corridor,Licc,Chevron
 source=src
 gpr.user=battlecodedownloadpackage
 profilerEnabled=false
