mucks in corners next to ec

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # modify this file to change project properties
-teamA=submittedbot1
-teamB=qualificationbot
+teamA=qualificationbot
+teamB=submittedbot1
 # maps=Branches,BadSnowflake,maptestsmall,Bog,Cow,Corridor,Licc,Chevron
-maps=Branches,BadSnowflake,maptestsmall,Bog,Cow,Corridor,Licc,Chevron
+maps=Licc, Licc, Licc, Licc, Licc
 source=src
 gpr.user=battlecodedownloadpackage
 profilerEnabled=false
