--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # modify this file to change project properties
-teamA=qualificationbot
-teamB=submittedbot1
-# maps=Branches,BadSnowflake,maptestsmall,Bog,Cow,Corridor,Licc,Chevron
-maps=Licc, Licc, Licc, Licc, Licc
+teamA=submittedbot1
+teamB=submittedbot0
+# maps=Andromeda,Branches,BadSnowflake,maptestsmall,Bog,Cow,Corridor,Licc,GetShrekt
+maps=Gridlock,Bog,circle,SeaFloor,Cow,Illusion,Snowflake,Licc
 source=src
 gpr.user=battlecodedownloadpackage
 profilerEnabled=false
