pre-test qualifier bot

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # modify this file to change project properties
-teamA=submittedbot1
-teamB=submittedbot0
+teamA=submittedbot0
+teamB=submittedbot1
 # maps=Andromeda,Branches,BadSnowflake,maptestsmall,Bog,Cow,Corridor,Licc,GetShrekt
-maps=Gridlock,Bog,circle,SeaFloor,Cow,Illusion,Snowflake,Licc
+maps=Bog
 source=src
 gpr.user=battlecodedownloadpackage
 profilerEnabled=false
